[gd_scene load_steps=2 format=2]

[ext_resource path="res://ViewSkillTree.gd" type="Script" id=1]

[node name="ViewSkillTree" type="Control"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 30

[node name="SkillRow1" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 56.0

[node name="SkillRow2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 56.0
margin_bottom = 30.0

[node name="SkillRow3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 56.0
margin_bottom = 60.0

[node name="SkillName" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 56.0
margin_bottom = 105.0
fit_content_height = true

[node name="SkillDescription" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 135.0
margin_right = 56.0
margin_bottom = 150.0
fit_content_height = true

[node name="UnlockButton" type="Button" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 56.0
margin_bottom = 200.0
text = "Unlock"
